--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,4 +10,6 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
     .container
+      - if flash.notice.present?
+        .alert.alert-success= flash.notice
       = yield
