--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -25,7 +25,7 @@ table.table.table-hover
       th= Task.human_attribute_name(:created_at)
   tbody
     - @tasks.each do |task|
-      tr
+      tr id="task-#{task.id}"
         td= link_to task.name, task
         td= task.created_at
         td
